...
        tabBarShowLabel: false,
      }}
    >
      <Tab.Screen
        name="MapTab"
        component={HomeStack}
        options={{ tabBarTestID: 'tab-map' }}
      />
      <Tab.Screen
        name="AddTab"
        component={AddStack}
        options={{ tabBarTestID: 'tab-add' }}
      />
...
